--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,24 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
-sourceCompatibility = 17
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+}
+
+test {
+    useJUnitPlatform()
 }
